@@ -1,10 +1,11 @@
 AUX libmp4v2-1.5.0.1+glibc-2.10.patch 1103 RMD160 68e639aefdb2bbcaf5dd9599423809ad5db846f4 SHA1 a1d6c4771b2f74506866b0738a66a7e9ce43153f SHA256 04899e5d8b4ab1ce1628c00a3e7c998e00c5eee4704a7d911e7bddf9cca9e9eb
 AUX libmp4v2-1.5.0.1-configurebashisms.patch 340 RMD160 d3c644a68ea90232e61002ed656eb8d7fecc3517 SHA1 d35a7c2d57e8c86d83f46b14ca4920532b6f7040 SHA256 26a42d61f3197530fb8a18b9c550978fa2f9befb35c73a99aefeecc57a8675fa
 DIST mp4v2-1.9.0.tar.bz2 479264 RMD160 6e2564ae58589fd5b556f6f9713d89b98aa5756a SHA1 c7ae8d0b45be55934e39a72e7d00c8bb564bf9c4 SHA256 d2a479b9435cef6fc597dd58fcfdf6bb81075119c88ccf5438cb47cfdcb69110
+DIST mp4v2-1.9.1.tar.bz2 432943 RMD160 66aed17925589b49ec3b1241bfcb45a8e3181c08 SHA1 c62d00e99b65efce16accd83c501fb8a57206aa8 SHA256 5c381caeab2326fc48cfda0fe202bdb8ba0ae624d9c97ad7680a2b07e2c2e3b4
 DIST mpeg4ip-1.5.0.1.tar.gz 4826180 RMD160 fee5c21c17a470e6de349e07d233a1eb46b2064a SHA1 1271de695ed65284d9c39aa91bf26c5494603fd3 SHA256 23535dd818898ec75ffa0df22d9f27189e77361ce8a500d58328073ee247bcb6
 EBUILD libmp4v2-1.5.0.1-r1.ebuild 1884 RMD160 8d177f5e115c648bdd7cf56bc1e50eab9896217e SHA1 a4e5b5f4a52a03587aba17063fbfc4742977af40 SHA256 3a65636ab67c535efccc5923962fecb9f2d82717b4775e89a3d3df9098eac6d4
 EBUILD libmp4v2-1.5.0.1-r2.ebuild 2206 RMD160 a25b70cf6e5ef8aca9621aab5367894f625c243a SHA1 5aad9420b2040b6ff31820ea8644eef428929103 SHA256 42a5ea543c2b247011e43f691f0fcae8c786258ea0417557f59c17e342ae8435
-EBUILD libmp4v2-1.5.0.1.ebuild 1769 RMD160 db89baf40f2a361422d2aa9e89b26ee9f9414d10 SHA1 97d7e2d5ae465f126f44636a46b0b9dfc2826188 SHA256 420336589be29ebe529a92e7bea5f47b6601a25aedf1a1c53c042c4c8a26be31
-EBUILD libmp4v2-1.9.0.ebuild 839 RMD160 9df3672c91c02e4a79b84dfc7c471f9ad5946c54 SHA1 6263d3eafe04f3e4bbbfaf33d230eddb06b05ba7 SHA256 9d92056917aad13deae25bce7a50c7b74b2e67be7fe666aef018d03645073341
-MISC ChangeLog 5807 RMD160 d5e76da06ee2993d153c86418205fa16bd16002b SHA1 549f815798d9b4dd4b373ef1d130fa2734d10736 SHA256 b48fa8bd3836e2c6db69eea2e77f0d8c8d18d5d84e2ad57bd34f1554e7d86d55
+EBUILD libmp4v2-1.9.0.ebuild 903 RMD160 44993f3ce4460b059a743583a33499fb691e14b0 SHA1 1450abdb494afb9c319b98b2e8dc3820b9104ea6 SHA256 edd655dff37b756d925837999397795596f3ef0900bb258167a202e0fa70720d
+EBUILD libmp4v2-1.9.1.ebuild 853 RMD160 b3532e941acb7c43e14b21f3c26df4e2235fe34e SHA1 83680e5e67f61ddeb339365f856b42c5cd296f8d SHA256 e0d60e39e3ac30617d173b980c2cc9dcf8684799903cc842cb42b6d4f0b40917
+MISC ChangeLog 6107 RMD160 94ff2dbf9404bedb4b641600689e553e5c5675ee SHA1 90c8c5058839d6fe78fac4e9304595aa7c5b7a11 SHA256 f4d3fa22a81a7358c83c519fa66f29f38ed8ff939a6d5193811cb6fe81667344
 MISC metadata.xml 233 RMD160 c20d298ac187e070edc6971a6010e07151c56b57 SHA1 e13e0c923a9ec6b4e64279413e4251168a079da6 SHA256 9a0a929d8d8181248f6cafff6d42e982b38f016167bb7b52da84d873599ab340
